--- a/downcontent.html
+++ b/downcontent.html
@@ -81,7 +81,7 @@
             console.log("Getting from server")
             const content = getParameterByName('content');
             const instance = axios.create({
-                baseURL: 'http://127.0.0.1:8000',
+                baseURL: 'http://himangithattey.pythonanywhere.com',
                 timeout: 10000,
             });
             console.log(content, axios)
